--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "sass": "^1.60.0"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.58.0",
+    "@figma/plugin-typings": "^1.79.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "vite-plugin-singlefile": "^0.13.5",
     "@vitejs/plugin-react": "^3.1.0",
     "concurrently": "^8.0.1",
     "esbuild": "^0.17.15",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-singlefile": "^0.13.5"
   }
 }
